--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <meta name="description" content="Local public group for the Marathi Society residing in Wales">
     <meta name="keywords" content="Marathi, Maharashtra, Wales, society, events, Welsh, non-political, Ganesh Utsav, Sankranti, Diwas">
     <link rel="stylesheet" href=".devcontainer/assets/css/style.css">
+    /*fonts cdn*/
+    <link href="https://fonts.cdnfonts.com/css/samarkan" rel="stylesheet">
+    /*bootstrap cdn*/
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Wales Marathi Society</title>
 </head>
 <body>
     <header>
-        <img src=".devcontainer/assets/images/logo.jpg" alt="Logo for Wales Marathi Society">
+        <div><img src=".devcontainer/assets/images/Bkgrd.jpg" alt="Logo for Wales Marathi Society">
+        </div>    
         <nav>
             <ul id="menu">
                 <li>
