--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- required meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Local public group for the Marathi Society residing in Wales">
     <meta name="keywords" content="Marathi, Maharashtra, Wales, society, events, Welsh, non-political, Ganesh Utsav, Sankranti, Diwas">
+    <!-- link to css stylesheet and cdn -->
     <link rel="stylesheet" href=".devcontainer/assets/css/style.css">
-    /*fonts cdn*/
-    <link href="https://fonts.cdnfonts.com/css/samarkan" rel="stylesheet">
-    /*bootstrap cdn*/
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
     <title>Wales Marathi Society</title>
 </head>
 <body>
     <header>
-        <div><img src=".devcontainer/assets/images/Bkgrd.jpg" alt="Logo for Wales Marathi Society">
-        </div>    
+        <a href="index.html">
+            <h1 class="logo">Wales Marathi Society</h1>
+        </a>
+                            
         <nav>
-            <ul id="menu">
+            <ul id="nav-elements">
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="about.html">About</a>
@@ -31,5 +33,14 @@
             </ul>
         </nav>
     </header>
+    <section>
+        Hero Image here
+    </section>
+    <section>
+        3 nav images with rounded edges
+    </section>
+    <section>
+        footer fixed
+    </section>
 </body>
 </html>
