feat:style logo and nav elements

--- a/index.html
+++ b/index.html
@@ -16,19 +16,22 @@
 <body>
     <header>
         <a href="index.html">
-            <h1 class="logo">Wales Marathi Society</h1>
+            <h1 id="logo">Wales Marathi Society</h1>
         </a>
                             
         <nav>
-            <ul id="nav-elements">
-                <li>
+            <ul id="nav-elements" class="list-inline">
+                <li class="list-inline-item">
                     <a href="index.html">Home</a>
+                </li class="list-inline-item">
+                <li class="list-inline-item">
+                    <a href="events.html">Events</a>
                 </li>
-                <li>
-                    <a href="about.html">About</a>
+                <li class="list-inline-item">
+                    <a href="gallery.html">Gallery</a>
                 </li>
-                <li>
-                    <a href="contact.html">Contact Us</a>
+                <li class="list-inline-item">
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
