feat:added logo and navigation bar to pages - Galley, Clubs, Events and contact

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         3 nav images with rounded edges
     </section>
     <section>
-        footer fixed
+        footer fixed This is home
     </section>
 </body>
 </html>
