--- a/clubs.html
+++ b/clubs.html
@@ -22,20 +22,21 @@
         <nav>
             <ul id="nav-elements" class="list-inline">
                 <li class="list-inline-item">
-                    <a href="index.html">Home</a>
+                    <a href="index.html"><span>Home</span></a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="events.html">Events</a>
+                    <a href="events.html"><span>Events</span></a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="gallery.html">Gallery</a>
+                    <a href="gallery.html"><span>Gallery</span></a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="contact.html">Contact</a>
+                    <a href="contact.html"><span>Contact</span></a>
                 </li>
             </ul>
         </nav>
     </header>
+    
     <section>
         Hero Image here
     </section>
