feat:Add and stylize Hero Image

--- a/clubs.html
+++ b/clubs.html
@@ -44,7 +44,7 @@
         3 nav images with rounded edges
     </section>
     <section>
-        footer fixed
+        footer fixed (this is clubs page)
     </section>
 </body>
 </html>
