--- a/events.html
+++ b/events.html
@@ -43,7 +43,7 @@
         3 nav images with rounded edges
     </section>
     <section>
-        footer fixed
+        footer fixed (this is events page)
     </section>
 </body>
 </html>
