--- a/index.html
+++ b/index.html
@@ -36,14 +36,24 @@
             </ul>
         </nav>
     </header>
-    <section>
-        Hero Image here
-    </section>
+ 
+    <section id="hero-image-bckgrd">
+        <div id="hero-image">
+            <div id="text-in-hero">
+              <h2>Namaskar!</h2>
+              <p>A Marathi Community in Wales</p>
+              <button type="button" class="btn btn-primary btn-lg btn-member">Become a Member</button>
+            </div>
+          </div>
+ </section>
+
+</section>
     <section>
         3 nav images with rounded edges
     </section>
     <section>
-        footer fixed This is home
+        footer (this is home)
     </section>
+
 </body>
 </html>
