--- a/gallery.html
+++ b/gallery.html
@@ -43,7 +43,7 @@
         3 nav images with rounded edges
     </section>
     <section>
-        footer fixed
+        Footer fixed (this is gallery page)  
     </section>
 </body>
 </html>
