feat: Change Hero Image and fixed padding around Text within

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
             <div id="text-in-hero">
               <h2>Namaskar!</h2>
               <p>A Marathi Community in Wales</p>
-              <button type="button" class="btn btn-primary btn-lg btn-member">Become a Member</button>
+              <form action="https://formdump.codeinstitute.net" method="POST">
+                <input type="email" name="email" placeholder="Enter your email address"> <br> <br>
+                <button href="sign-up.html" type="submit" class="btn btn-danger">Sign Up</button> 
+              </form>
             </div>
           </div>
     </section>
