feat: added info cards grid and 3 cards to index.html

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 </head>
 <body>
     <header>
+        <!-- Main Logo to repeat on all pages -->
         <a href="index.html">
             <h1 id="logo">Wales Marathi Society</h1>
         </a>
-                            
+        <!-- Nav Menu Bar to repeat on all pages -->
         <nav>
             <ul id="nav-elements" class="list-inline">
                 <li class="list-inline-item">
@@ -49,10 +50,21 @@
             </div>
           </div>
     </section>
-
-</section>
+    <!-- 3 image and info cards -->
     <section>
-        3 nav images with rounded edges
+        <div class="container info-grid">
+            <div class="row">
+              <div class="col-sm Image1">
+                One of three columns
+              </div>
+              <div class="col-sm Image2">
+                One of three columns
+              </div>
+              <div class="col-sm Image3">
+                One of three columns
+              </div>
+            </div>
+          </div>
     </section>
     <section>
         footer (this is home)
