--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
     <!-- 3 image and info cards -->
     <section>
         <div class="container info-grid">
-            <div class="row">
-              <div class="col-sm Image1">
+            <div class="row info-img">
+              <div class="col-sm Image1 hidden-text">
+                    <p class="text-reveal"><h6>About Us</h6>We are a social, non-political, community-driven organisation for all Marathi who are also residents of Wales. We are run by the members of our community coming together to celebrate our cultural traditions.</p>
+              </div>
+              <div class="col-sm Image2 hidden-text">
                 One of three columns
               </div>
-              <div class="col-sm Image2">
-                One of three columns
-              </div>
-              <div class="col-sm Image3">
+              <div class="col-sm Image3 hidden-text">
                 One of three columns
               </div>
             </div>
