debug: move assets folder outside .devcontainer

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div id="text-in-hero">
               <h2>Namaskar!</h2>
               <p>A Marathi Community in Wales</p>
-              <form action="https://formdump.codeinstitute.net" method="POST">
+              <form action="thank-you.html" method="GET">
                 <input type="email" name="email" placeholder="Enter your email address"> <br> <br>
                 <button href="sign-up.html" type="submit" class="btn btn-danger">Sign Up</button> 
               </form>
@@ -55,13 +55,13 @@
         <div class="container info-grid">
             <div class="row info-img">
               <div class="col-sm Image1 hidden-text">
-                    <p class="text-reveal"><h6>About Us</h6>We are a social, non-political, community-driven organisation for all Marathi who are also residents of Wales. We are run by the members of our community coming together to celebrate our cultural traditions.</p>
+                    <p class="text-reveal"><h4>About Us</h4>We are a social, non-political, community-driven organisation for all Marathi who are also residents of Wales. We are run by the members of our community coming together to celebrate our cultural traditions.</p>
               </div>
               <div class="col-sm Image2 hidden-text">
-                One of three columns
+                <p class="text-reveal"><h4>Member Perks</h4>All members are able to buy tickets to events at a concessional price. Memebers children (under age 12) can avail Marathi language lessons for free</p>
               </div>
               <div class="col-sm Image3 hidden-text">
-                One of three columns
+                <p class="text-reveal"><h4>Clubs and Events</h4> </p>
               </div>
             </div>
           </div>
