page: added GET page thank-you.html

--- a/contact.html
+++ b/contact.html
@@ -8,22 +8,23 @@
     <meta name="description" content="Local public group for the Marathi Society residing in Wales">
     <meta name="keywords" content="Marathi, Maharashtra, Wales, society, events, Welsh, non-political, Ganesh Utsav, Sankranti, Diwas">
     <!-- link to css stylesheet and cdn -->
-    <link rel="stylesheet" href=".devcontainer/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
     <title>Wales Marathi Society</title>
 </head>
 <body>
     <header>
+        <!-- Main Logo to repeat on all pages -->
         <a href="index.html">
             <h1 id="logo">Wales Marathi Society</h1>
         </a>
-                            
+        <!-- Nav Menu Bar to repeat on all pages -->
         <nav>
             <ul id="nav-elements" class="list-inline">
                 <li class="list-inline-item">
                     <a href="index.html">Home</a>
-                </li class="list-inline-item">
+                </li>
                 <li class="list-inline-item">
                     <a href="events.html">Events</a>
                 </li>
@@ -36,11 +37,14 @@
             </ul>
         </nav>
     </header>
-    <section>
-        Hero Image here
-    </section>
-    <section>
-        3 nav images with rounded edges
+ 
+    <section id="hero-image-bckgrd">
+        <div id="hero-image">
+            <div id="text-in-hero">
+              <h2>Namaskar!</h2>
+              <p>A Marathi Community in Wales</p>
+            </div>
+        </div>
     </section>
     <section>
         footer fixed (this is contact page)
