--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <p>A Marathi Community in Wales</p>
               <form action="thank-you.html" method="GET">
                 <input type="email" name="email" placeholder="Enter your email address"> <br> <br>
-                <button href="sign-up.html" type="submit" class="btn btn-danger">Sign Up</button> 
+                <button type="submit" class="btn btn-danger btn-style">Sign Up</button> 
               </form>
             </div>
           </div>
