--- a/thank-you.html
+++ b/thank-you.html
@@ -43,11 +43,8 @@
             <div id="text-in-hero">
               <h2>Namaskar!</h2>
               <p>A Marathi Community in Wales</p>
+              <h5>Thank you for your query.</h5>
+              <h6>We will get in touch!</h6>
             </div>
-        </div>
+          </div>
     </section>
-    <section>
-        footer fixed (this is events page)
-    </section>
-</body>
-</html>
