--- a/clubs.html
+++ b/clubs.html
@@ -47,7 +47,15 @@
         </div>
     </section>
     <section>
-        footer fixed (this is clubs page)
+        <footer class="footer-box">
+
+            <span>Find us on:</span>
+    
+            <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)"><i class="fa-brands fa-square-facebook"></i>Facebook</a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)"><i class="fa-brands fa-instagram"></i>Instagram</a>
+            <text type="email">info@wms.co.uk</text>
+            
+        </footer>
     </section>
 </body>
 </html>
