feat:stylized footer for all pages

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1 id="logo">Wales Marathi Society</h1>
         </a>
         <!-- Nav Menu Bar to repeat on all pages -->
-        <nav>
+        <nav> 
             <ul id="nav-elements" class="list-inline">
                 <li class="list-inline-item">
                     <a href="index.html">Home</a>
@@ -69,13 +69,13 @@
           </div>
     </section>
     <section>
-        <footer class="footer-box">
+        <footer>
 
             <span>Find us on:</span>
     
-            <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)"><i class="fa-brands fa-square-facebook"></i>Facebook</a>
-            <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)"><i class="fa-brands fa-instagram"></i>Instagram</a>
-            <text type="email">info@wms.co.uk</text>
+                <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)"><i class="fa-brands fa-square-facebook"></i>Facebook</a>
+                <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)"><i class="fa-brands fa-square-instagram"></i>Instagram</a>
+                <a href="mailto:info@wms.org.uk" target="_blank" aria-label="Email address"><i class="fa-solid fa-envelope"></i>info@wms.org.uk</a>
             
         </footer>
     </section>
