feat: added responsive CSS styling for contact.html page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- link to css stylesheet and cdn -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Fontawesome js-->
     <script src="https://kit.fontawesome.com/fd0a2314c7.js" crossorigin="anonymous"></script>
 
@@ -45,13 +46,14 @@
             <div id="text-in-hero">
               <h2>Namaskar!</h2>
               <p>A Marathi Community in Wales</p>
-              <form action="thank-you.html" method="GET">
-                <input class="main-page" type="email" name="email" placeholder="Enter your email address"> <br> <br>
-                <button type="submit" class="btn btn-danger btn-style">Sign Up</button> 
-              </form>
+                    <form action="thank-you.html" method="GET">
+                    <input class="main-page" type="email" name="email" placeholder="Enter your email address"> <br> <br>
+                    <button type="submit" class="btn btn-danger btn-style">Sign Up</button> 
+                </form>
             </div>
           </div>
     </section>
+    
     <!-- 3 image and info cards -->
     <section>
         <div class="container info-grid">
