--- a/events.html
+++ b/events.html
@@ -10,6 +10,8 @@
     <!-- link to css stylesheet and cdn -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Fontawesome js-->
+    <script src="https://kit.fontawesome.com/fd0a2314c7.js" crossorigin="anonymous"></script>
     
     <title>Wales Marathi Society</title>
 </head>
