--- a/gallery.html
+++ b/gallery.html
@@ -10,6 +10,8 @@
     <!-- link to css stylesheet and cdn -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Fontawesome js-->
+    <script src="https://kit.fontawesome.com/fd0a2314c7.js" crossorigin="anonymous"></script>
     
     <title>Wales Marathi Society</title>
 </head>
@@ -36,7 +38,79 @@
             </ul>
         </nav>
     </header>
-    
+    <main>
+        <h6>A Collection of Photographs from Our Events!</h6>
+    </main>
+
+    <section>
+        <div class="container">
+            <h4>Ganesh Utsav</h4>
+            <div class="row">
+              <div class="col">
+                1 of 2
+              </div>
+              <div class="col">
+                2 of 2
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                1 of 3
+              </div>
+              <div class="col">
+                2 of 3
+              </div>
+              <div class="col">
+                3 of 3
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <h4>Sankranti</h4>
+            <div class="row">
+              <div class="col">
+                <image/>
+              </div>
+              <div class="col">
+                <image/>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <image  />
+              </div>
+              <div class="col">
+                <image/>
+              </div>
+              <div class="col">
+                3 of 3
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <h4>Maharashtra Diwas</h4>
+            <div class="row">
+              <div class="col">
+                1 of 2
+              </div>
+              <div class="col">
+                2 of 2
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                1 of 3
+              </div>
+              <div class="col">
+                2 of 3
+              </div>
+              <div class="col">
+                3 of 3
+              </div>
+            </div>
+          </div>    
+    </section>
+
     <section>
         <footer>
 
