feat: Added all 27 compressed photos to gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
 <section class="image-grid">  
   <div class="g-container">
     <div class="g-heading">
-      <h5>Ganesh Utsav!</h5>
+      <h5>Ganesh Utsav</h5>
     </div>
     <div class="g-box">
       <div class="p-col-1">
@@ -64,47 +64,47 @@
   </div>
   <div class="g-container">
     <div class="g-heading">
-      <h5>Ganesh Utsav!</h5>
+      <h5>Sankranti</h5>
     </div>
     <div class="g-box">
       <div class="p-col-1">
-        <img src="./assets/images/gallery-images/image1.jpg">
-          <img src="./assets/images/gallery-images/image2.jpg">
-            <img  src="./assets/images/gallery-images/image3.jpg">
+        <img src="./assets/images/gallery-images/image10.jpg">
+          <img src="./assets/images/gallery-images/image13.jpg">
+            <img  src="./assets/images/gallery-images/image14.jpg">
                 
       </div>
       <div class="p-col-1">
-        <img src="./assets/images/gallery-images/image4.jpg">
-          <img src="./assets/images/gallery-images/image5.jpg">
-            <img  src="./assets/images/gallery-images/image3.jpg">
+        <img src="./assets/images/gallery-images/image15.jpg">
+          <img src="./assets/images/gallery-images/image17.jpg">
+            <img  src="./assets/images/gallery-images/image18.jpg">
       </div>
       <div class="p-col-1">
-        <img src="./assets/images/gallery-images/image1.jpg">
-          <img src="./assets/images/gallery-images/image2.jpg">
-            <img  src="./assets/images/gallery-images/image3.jpg">
+        <img src="./assets/images/gallery-images/image11.jpg">
+          <img src="./assets/images/gallery-images/image12.jpg">
+            <img  src="./assets/images/gallery-images/image16.jpg">
       </div>
     </div>  
   </div>
   <div class="g-container">
     <div class="g-heading">
-      <h5>Ganesh Utsav!</h5>
+      <h5>Diwali</h5>
     </div>
     <div class="g-box">
       <div class="p-col-1">
-        <img src="./assets/images/gallery-images/image1.jpg">
-          <img src="./assets/images/gallery-images/image2.jpg">
-            <img  src="./assets/images/gallery-images/image3.jpg">
+        <img src="./assets/images/gallery-images/image19.jpg">
+          <img src="./assets/images/gallery-images/image20.jpg">
+            <img  src="./assets/images/gallery-images/image21.jpg">
                 
       </div>
       <div class="p-col-1">
-        <img src="./assets/images/gallery-images/image4.jpg">
-          <img src="./assets/images/gallery-images/image5.jpg">
-            <img  src="./assets/images/gallery-images/image6.jpg">
+        <img src="./assets/images/gallery-images/image22.jpg">
+          <img src="./assets/images/gallery-images/image23.jpg">
+            <img  src="./assets/images/gallery-images/image24.jpg">
       </div>
       <div class="p-col-1">
-        <img src="./assets/images/gallery-images/image7.jpg">
-          <img src="./assets/images/gallery-images/image8.jpg">
-            <img  src="./assets/images/gallery-images/image9.jpg">
+        <img src="./assets/images/gallery-images/image25.jpg">
+          <img src="./assets/images/gallery-images/image26.jpg">
+            <img  src="./assets/images/gallery-images/image27.jpg">
       </div>
     </div>  
   </div>
