--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <!-- Main Logo to repeat on all pages -->
         <a href="index.html">
-            <h1 id="logo">Wales Marathi Society</h1>
+            <h1 class="logo">Wales Marathi Society</h1>
         </a>
         <!-- Nav Menu Bar to repeat on all pages -->
         <nav> 
