--- a/thank-you.html
+++ b/thank-you.html
@@ -19,11 +19,11 @@
     <header>
         <!-- Main Logo to repeat on all pages -->
         <a href="index.html">
-            <h1 id="logo">Wales Marathi Society</h1>
+            <h1 class="logo">Wales Marathi Society</h1>
         </a>
         <!-- Nav Menu Bar to repeat on all pages -->
-        <nav>
-            <ul id="nav-elements" class="list-inline">
+        <nav> 
+            <ul class="nav-elements" class="list-inline">
                 <li class="list-inline-item">
                     <a href="index.html">Home</a>
                 </li>
