feat: added content to landing page and altered font-size on events.html page

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                     <p class="text-reveal"><h4>About Us</h4>We are a social, non-political, community-driven organisation for all Marathi who are also residents of Wales. We are run by the members of our community coming together to celebrate our cultural traditions.</p>
               </div>
               <div class="col-sm Image2 hidden-text">
-                <p class="text-reveal"><h4>Member Perks</h4>All members are able to buy tickets to events at a concessional price. Memebers children (under age 12) can avail Marathi language lessons for free</p>
+                <p class="text-reveal"><h4>Member Perks</h4>All members are able to buy tickets to events at a concessional price. Members children (under age 12) can avail Marathi language lessons for free</p>
               </div>
               <div class="col-sm Image3 hidden-text">
-                <p class="text-reveal"><h4>Clubs and Events</h4> </p>
+                <p class="text-reveal"><h4>Marathi Shala</h4>We run Marathi language lessons for all age groups every 2 weeks. Email us to find out more. Non-member children can join for suggestion donation amount.</p>
               </div>
             </div>
           </div>
