--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </a>
         <!-- Nav Menu Bar to repeat on all pages -->
         <nav> 
-            <ul class="nav-elements" class="list-inline">
+            <ul class="nav-elements">
                 <li class="list-inline-item">
                     <a href="index.html">Home</a>
                 </li>
@@ -59,13 +59,22 @@
         <div class="container info-grid">
             <div class="row info-img">
               <div class="col-sm Image1 hidden-text">
-                    <p class="text-reveal"><h4>About Us</h4>We are a social, non-political, community-driven organisation for all Marathi who are also residents of Wales. We are run by the members of our community coming together to celebrate our cultural traditions.</p>
+                    <p>
+                        <h4>About Us</h4>
+                        We are a social, non-political, community-driven organisation for all Marathi who are also residents of Wales. We are run by the members of our community coming together to celebrate our cultural traditions.
+                    </p>
               </div>
               <div class="col-sm Image2 hidden-text">
-                <p class="text-reveal"><h4>Member Perks</h4>All members are able to buy tickets to events at a concessional price. Members children (under age 12) can avail Marathi language lessons for free</p>
+                <p>
+                    <h4>Member Perks</h4>
+                    All members are able to buy tickets to events at a concessional price. Members children (under age 12) can avail Marathi language lessons for free
+                </p>
               </div>
               <div class="col-sm Image3 hidden-text">
-                <p class="text-reveal"><h4>Marathi Shala</h4>We run Marathi language lessons for all age groups every 2 weeks. Email us to find out more. Non-member children can join for suggestion donation amount.</p>
+                <p>
+                    <h4>Marathi Shala</h4>
+                    We run Marathi language lessons for all age groups every 2 weeks. Email us to find out more. Non-member children can join for suggestion donation amount.
+                </p>
               </div>
             </div>
           </div>
