--- a/thank-you.html
+++ b/thank-you.html
@@ -23,7 +23,7 @@
         </a>
         <!-- Nav Menu Bar to repeat on all pages -->
         <nav> 
-            <ul class="nav-elements" class="list-inline">
+            <ul class="nav-elements">
                 <li class="list-inline-item">
                     <a href="index.html">Home</a>
                 </li>
