feat: added relevant title to all pages

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <!-- Fontawesome js-->
     <script src="https://kit.fontawesome.com/fd0a2314c7.js" crossorigin="anonymous"></script>
     
-    <title>Wales Marathi Society</title>
+    <title>Wales Marathi Society - Contact Page</title>
 </head>
 <body>
     <header>
