--- a/events.html
+++ b/events.html
@@ -13,7 +13,7 @@
     <!-- Fontawesome js-->
     <script defer src="https://kit.fontawesome.com/fd0a2314c7.js" crossorigin="anonymous"></script>
     
-    <title>Wales Marathi Society</title>
+    <title>Wales Marathi Society - Events Page</title>
 </head>
 <body>
     <header>
