--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Fontawesome js-->
     <script src="https://kit.fontawesome.com/fd0a2314c7.js" crossorigin="anonymous"></script>
 
-    <title>Wales Marathi Society</title>
+    <title>Wales Marathi Society - Home Page</title>
 </head>
 <body>
     <header>
