debug:changed to further resized images for better performance

--- a/gallery.html
+++ b/gallery.html
@@ -46,20 +46,20 @@
       </div>
       <div class="g-box">
         <div class="p-col-1">
-          <img src="./assets/images/gallery-images/image1.jpg">
-            <img src="./assets/images/gallery-images/image2.jpg">
-              <img  src="./assets/images/gallery-images/image3.jpg">
+          <img src="./assets/images/gallery-images/image1.jpg" alt="Idol of Hindu god Ganesh decorated with flowers">
+            <img src="./assets/images/gallery-images/image2.jpg" alt="A collection of idols of Hindu god Ganesh ready for sale">
+              <img  src="./assets/images/gallery-images/image3.jpg" alt="People carrying decorated idol of Hindu god Ganesh">
                   
         </div>
         <div class="p-col-1">
-          <img src="./assets/images/gallery-images/image4.jpg">
-            <img src="./assets/images/gallery-images/image5.jpg">
-              <img  src="./assets/images/gallery-images/image6.jpg">
+          <img src="./assets/images/gallery-images/image4.jpg" alt="Bid idol of Hindu god Ganesh surrounded in red coloured powder flying">
+            <img src="./assets/images/gallery-images/image5.jpg" alt="A collection of tiny idols of Hindu god Ganesh ready for sale">
+              <img  src="./assets/images/gallery-images/image6.jpg" alt="Woman in traditional attire holding an idol of Hindu god Ganesh in her palm">
         </div>
         <div class="p-col-1">
-          <img src="./assets/images/gallery-images/image7.jpg">
-            <img src="./assets/images/gallery-images/image8.jpg">
-              <img  src="./assets/images/gallery-images/image9.jpg">
+          <img src="./assets/images/gallery-images/image7.jpg" alt="People in procession coloured in red surrounding a large idol of Hindu god Ganesh">
+            <img src="./assets/images/gallery-images/image8.jpg" alt="Women welcomes Hindu god Ganesh with open arms in air while people carry an idol in a procession on street">
+              <img  src="./assets/images/gallery-images/image9.jpg" alt="Hindu god Ganesh placed in a beautifully decorated altar">
         </div>
       </div>  
     </div>
@@ -69,20 +69,20 @@
       </div>
       <div class="g-box">
         <div class="p-col-1">
-          <img src="./assets/images/gallery-images/image10.jpg">
-            <img src="./assets/images/gallery-images/image13.jpg">
-              <img  src="./assets/images/gallery-images/image14.jpg">
+          <img src="./assets/images/gallery-images/image10.jpg" alt="Golden bangles, flowers and red coth set on desk ready for Sankranti celebration">
+            <img src="./assets/images/gallery-images/image13.jpg" alt="Indian sweet made of sesame and jaggery aesthetically placed with flowers around">
+              <img  src="./assets/images/gallery-images/image14.jpg" alt="People gathered around in a hall and some sat around a table to celebrate Sankranti">
                   
         </div>
         <div class="p-col-1">
-          <img src="./assets/images/gallery-images/image15.jpg">
-            <img src="./assets/images/gallery-images/image17.jpg">
-              <img  src="./assets/images/gallery-images/image18.jpg">
+          <img src="./assets/images/gallery-images/image15.jpg" alt="People gathered on street dressed in white and red traditional attire">
+            <img src="./assets/images/gallery-images/image17.jpg" alt="Two woman contestants posing and taking a selfie with their phone">
+              <img  src="./assets/images/gallery-images/image18.jpg" alt="Hands flaunting freshly applied henna designs">
         </div>
         <div class="p-col-1">
-          <img src="./assets/images/gallery-images/image11.jpg">
-            <img src="./assets/images/gallery-images/image12.jpg">
-              <img  src="./assets/images/gallery-images/image16.jpg">
+          <img src="./assets/images/gallery-images/image11.jpg" alt="Hands with rufous coloured henna designs">
+            <img src="./assets/images/gallery-images/image12.jpg" alt="eople gathered on street dressed in white and red traditional attire, ready for a procession">
+              <img  src="./assets/images/gallery-images/image16.jpg" alt="Indian savoury cakes made of sago and potato ">
         </div>
       </div>  
     </div>
