--- a/events.html
+++ b/events.html
@@ -55,7 +55,7 @@
                 <p>Breakfast and Lunch will be served at the venue with lots of Marathi food</p>
             </div>
                 <div class="col-sm-4 col-md-4 col-lg-4 order-lg-1 order-md-1">
-                    <img src="./assets/images/flyer 1.jpg" class="flyer-container" title="gudi padwa celebration" alt="an image of upside-down pot hanging atop of decortated stick on a red background with flowers">
+                    <img src="./assets/images/flyer1.jpg" class="flyer-container" title="gudi padwa celebration" alt="Flyer for Event Gudi Padwa">
                 </div>
             </div>        
         </div>    
@@ -74,7 +74,7 @@
                     <p><strong>Location: Temple of Peace, Cardiff, CF11 6PP </strong></p>
                     <p>Pooja will be followed by aarti then leave for visarjan and dinner</p>               </div>
                     <div class="col-sm-4 col-md-4 col-lg-4 order-lg-2 order-md-2">
-                        <img src="./assets/images/flyer 2.jpg" class="flyer-container" title="gudi padwa celebration" alt="an image of Indian God Ganesh and event details">
+                        <img src="./assets/images/flyer2.jpg" class="flyer-container" title="gudi padwa celebration" alt="Flyer for event Ganesh Utsav Celebration">
                     </div>
                 </div>        
             </div>               
