debug: edited all file names to match industry standards

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
             <div class="contact-container">
                 <h2>Contact Us!</h2>
                 <div>  
-                    <form action="thank-you.html" method="GET" class="form">
+                    <form action="thankyou.html" method="GET" class="form">
                         <div class="input-box">
                             <input class="input-value" type="text" name="fullname" placeholder="Your Full Name" aria-label="Type your Full Name Here" required>
                         </div>
