feat: alt text added to all images in gallery.html to improve accessibility

--- a/gallery.html
+++ b/gallery.html
@@ -83,7 +83,7 @@
         </div>
         <div class="p-col-1">
           <img src="./assets/images/gallery-images/image11.jpg" alt="Hands with rufous coloured henna designs">
-            <img src="./assets/images/gallery-images/image12.jpg" alt="eople gathered on street dressed in white and red traditional attire, ready for a procession">
+            <img src="./assets/images/gallery-images/image12.jpg" alt="People gathered on street dressed in white and red traditional attire, ready for a procession">
               <img  src="./assets/images/gallery-images/image16.jpg" alt="Indian savoury cakes made of sago and potato ">
         </div>
       </div>  
@@ -94,20 +94,20 @@
       </div>
       <div class="g-box">
         <div class="p-col-1">
-          <img src="./assets/images/gallery-images/image19.jpg">
-            <img src="./assets/images/gallery-images/image20.jpg">
-              <img  src="./assets/images/gallery-images/image21.jpg">
+          <img src="./assets/images/gallery-images/image19.jpg" alt="Indian classical dancers posing for photo">
+            <img src="./assets/images/gallery-images/image20.jpg" alt="colourful lanterns decorated for Diwali">
+              <img  src="./assets/images/gallery-images/image21.jpg" alt="two women smear vermillion to celebrate Diwali">
                   
         </div>
         <div class="p-col-1">
-          <img src="./assets/images/gallery-images/image22.jpg">
-            <img src="./assets/images/gallery-images/image23.jpg">
-              <img  src="./assets/images/gallery-images/image24.jpg">
+          <img src="./assets/images/gallery-images/image22.jpg" alt="a selection of flowers, sweets and pooja items">
+            <img src="./assets/images/gallery-images/image23.jpg" alt="Indian classical dancer psoing in white saree">
+              <img  src="./assets/images/gallery-images/image24.jpg" alt="Group of drummers getting ready to play">
         </div>
         <div class="p-col-1">
-          <img src="./assets/images/gallery-images/image25.jpg">
-            <img src="./assets/images/gallery-images/image26.jpg">
-              <img  src="./assets/images/gallery-images/image27.jpg">
+          <img src="./assets/images/gallery-images/image25.jpg" alt="People gathered while a priest performs pooja">
+            <img src="./assets/images/gallery-images/image26.jpg" alt="people stand around and watch while lamps are lit for Diwali">
+              <img  src="./assets/images/gallery-images/image27.jpg" alt="Sparklers lit for Diwali">
         </div>
       </div>  
     </div>
