feat: added features to ensure form is validating index.html and contact.html

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
             <div class="contact-container">
                 <h2>Contact Us!</h2>
                 <div>  
-                    <form action="thankyou.html" method="GET" class="form">
+                    <form action="thankyou.html" method="GET" class="form needs-validation">
                         <div class="input-box">
                             <input class="input-value" type="text" name="fullname" placeholder="Your Full Name" aria-label="Type your Full Name Here" required>
                         </div>
@@ -65,11 +65,11 @@
                         </div>
                         <div class="input-box">
                             <span>       
-                                <label for="opt-in" class="yes-rad1">Yes Please</label>
+                                <label for="opt-in" class="yes-rad1">Yes please</label>
                                 <input type="radio" id="opt-in" name="consent" value="Yes" aria-label="click to give your consent" checked>
                             </span>
                             <span>
-                                <label for="no-thnk">No Thank You</label>
+                                <label for="no-thnk">No thank you</label>
                                 <input type="radio" id="no-thnk" name="consent" value="no" aria-label="click to deny your consent" checked>                             
                             </span>
                         </div>                            
@@ -104,6 +104,7 @@
                 <a href="mailto:info@wms.org.uk" target="_blank" aria-label="Email address"><i class="fa-solid fa-envelope"></i>info@wms.org.uk</a>
             
         </footer>
+
     
 </body>
 </html>
