--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <h2>Namaskar!</h2>
               <p>A Marathi Community in Wales</p>
                 <form action="thankyou.html" method="GET">
-                    <input class="main-page" type="email" name="email" placeholder="Enter your email address"> <br> <br>
+                    <input class="main-page" type="email" name="email" placeholder="Enter your email address" required> <br> <br>
                     <button type="submit" class="btn btn-danger btn-style">Sign Up</button> 
                 </form>
             </div>
