feat: Added image to Thank you page

--- a/thankyou.html
+++ b/thankyou.html
@@ -49,12 +49,16 @@
                <h6>We will get in touch!</h6>
             </div>
          </div>
+         <div class="address-image">
+            <div>
+
+            </div>
+         </div>
       </section>
       <footer>
          <span>Find us on:</span>
          <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)"><i class="fa-brands fa-square-facebook"></i>Facebook</a>
-         <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)"><i class="fa-brands fa-square-instagram"></i>Instagram</a>
-         <a href="mailto:info@wms.org.uk" target="_blank" aria-label="Email address"><i class="fa-solid fa-envelope"></i>info@wms.org.uk</a>
+         <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)"><i class="fa-brands fa-square-instagram"></i>Instagram</a>         
       </footer>
    </body>
 </html>
