--- a/thankyou.html
+++ b/thankyou.html
@@ -49,12 +49,12 @@
                <h6>We will get in touch!</h6>
             </div>
          </div>
-         <div class="address-image">
-            <div>
-
-            </div>
-         </div>
       </section>
+      <div class="address-image">
+         <div class="address-container">
+
+         </div>
+      </div>
       <footer>
          <span>Find us on:</span>
          <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)"><i class="fa-brands fa-square-facebook"></i>Facebook</a>
