edit: Corrected gramatical errors wihtin all pages

--- a/events.html
+++ b/events.html
@@ -46,12 +46,12 @@
                <div class="col-sm-4 col-md-8 col-lg-8 order-lg-2 order-md-2 e-details">
                   <h2><i class="fa-solid fa-gopuram"></i> Gudi Padwa Celebrations!</h2>
                   <p>Celebrate the start of Marathi New Year in style with Wales Marathi Society in Cardiff, Wales</p>
-                  <p>Inaugration by Mayor of Cardiff by lighting the lamp to start off the event with brightness!</p>
-                  <p>Introduction: Speech by President og Wales Marathi Society and introduction of our society to honourable Mayor</p>
+                  <p>Inaugration by the Mayor of Cardiff by lighting the lamp to start off the event with brightness!</p>
+                  <p>Introduction: Speech by President of Wales Marathi Society and introduction of our society to the honourable Mayor</p>
                   <p><strong>Date: 27th April 2024 </strong></p>
                   <p><strong>Time: 10:00 to 14:00</strong></p>
                   <p><strong>Location: Cardiff community hall, Cardiff road, Cardiff, CF11 6PP </strong></p>
-                  <p>Breakfast and Lunch will be served at the venue with lots of Marathi food</p>
+                  <p>Breakfast and Lunch will be served.</p>
                </div>
                <div class="col-sm-4 col-md-4 col-lg-4 order-lg-1 order-md-1">
                   <img src="./assets/images/flyer1.jpg" class="flyer-container" title="gudi padwa celebration" alt="Flyer for Event Gudi Padwa">
