--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                <div class="col-sm Image2 hidden-text">
                   <h3>Member Perks</h3>
                   <p>    
-                     All members are able to buy tickets to events at a concessional price. Members children (under age 12) can avail Marathi language lessons for free
+                     All members are able to buy tickets to events at a concessional price. Members' children (under age 12) can avail Marathi language lessons for free.
                   </p>
                </div>
                <div class="col-sm Image3 hidden-text">
                   <h3>Marathi Shala</h3>
                   <p>
-                     We run Marathi language lessons for all age groups every 2 weeks. Email us to find out more. Non-member children can join for suggestion donation amount.
+                     We run Marathi language lessons for all age groups every 2 weeks. Email us to find out more. Non-member children can join for a suggested donation amount.
                   </p>
                </div>
             </div>
