Readme updated with Gratitude notes

--- a/gallery.html
+++ b/gallery.html
@@ -97,7 +97,7 @@
                </div>
                <div class="p-col-1">
                   <img src="./assets/images/gallery-images/image22.jpg" alt="a selection of flowers, sweets and pooja items">
-                  <img src="./assets/images/gallery-images/image23.jpg" alt="Indian classical dancer psoing in white saree">
+                  <img src="./assets/images/gallery-images/image23.jpg" alt="Indian classical dancer posing in white saree">
                   <img  src="./assets/images/gallery-images/image24.jpg" alt="Group of drummers getting ready to play">
                </div>
                <div class="p-col-1">
